fix empty hash problem, gap in ingredients

--- a/sass/_recipes-window.scss
+++ b/sass/_recipes-window.scss
@@ -149,6 +149,10 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 2rem 5rem;
+
+        @media screen and (max-width: 425px) {
+          gap: 2rem;
+        }
       }
     }
 
